--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="6Ttk9p86OxVo458P5-twqynqPDviBmT6vKysOq0-Di4" />
   <title>หน้าแรก</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='StyleLoginPag.css') }}"> <!-- CSS -->
 </head>
