--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="google-site-verification" content="6Ttk9p86OxVo458P5-twqynqPDviBmT6vKysOq0-Di4" />
-  <title>หน้าแรก</title>
+  <title>JC888.COM</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='StyleLoginPag.css') }}"> <!-- CSS -->
 </head>
 <body>
